project (graceful-bootloader)
cmake_minimum_required (VERSION 3.5)

set (CMAKE_C_STANDARD 99)
set (CMAKE_VERBOSE_MAKEFILE ON)
set (CMAKE_INCLUDE_CURRENT_DIR ON)
set (CMAKE_INCLUDE_CURRENT_DIR YES)
set (CMAKE_INCLUDE_DIRECTORIES_BEFORE ON)

set (CMAKE_PROJECT_VERSION_MAJOR 0)
set (CMAKE_PROJECT_VERSION_MINOR 0)
set (CMAKE_PROJECT_VERSION_PATCH 0)
set (CMAKE_PROJECT_VERSION "${CMAKE_PROJECT_VERSION_MAJOR}.${CMAKE_PROJECT_VERSION_MINOR}.${CMAKE_PROJECT_VERSION_PATCH}")

include_directories (${CMAKE_SOURCE_DIR}/app/)

set (TARGET_CPU "i386")
set (TARGET_PLATFORM "pc")


add_subdirectory(app)